orvalリファクタ
