# backend/app/routers/tags.py
@@ -6,7 +6,7 @@ router = APIRouter()
 
 
 @router.get(
-    "/api/tags/list", response_model=list[Tags], operation_id="fetch_translated_tags"
+    "/tags/list", response_model=list[Tags], operation_id="fetch_translated_tags"
 )
 async def fetch_translated_tags() -> list[Tags]:
     tags = tag_service.fetch_translated_tags()
